--- a/vignettes/vignette_aspect_importance.Rmd
+++ b/vignettes/vignette_aspect_importance.Rmd
@@ -22,13 +22,15 @@ knitr::opts_chunk$set(
 
 # Data and logistic regression model for Titanic survival
 
-Vignette presents the aspect_importance() function on the datasets: `titanic_imputed` and `apartments` (both are available in the `DALEX` package). 
+Vignette presents the predict_aspects() function on the datasets: `titanic_imputed` and `apartments` (both are available in the `DALEX` package). 
 At the beginning, we download `titanic_imputed` dataset and build logistic regression model.
 
 ```{r read titanic data}
+
 library("DALEX")
+
 titanic <- titanic_imputed
-titanic_without_target <- titanic[,colnames(titanic)!="survived"]
+titanic_without_target <- titanic[,colnames(titanic) != "survived"]
 head(titanic)
 
 model_titanic_glm <-
@@ -40,7 +42,7 @@ model_titanic_glm <-
 
 #  Preparing additional parameters
 
-Before using aspect_importance() we need to:
+Before using predict_aspects() we need to:
 
 * group features of the dataset into aspects, 
 * choose observation for which we want to explain aspects' importance.
@@ -53,6 +55,7 @@ aspects_titanic <-
     personal = c("age", "gender"),
     embarked = "embarked"
   )
+
 passenger <- data.frame(
   class = factor(
     "3rd",
@@ -69,41 +72,35 @@ passenger <- data.frame(
 )
 
 passenger
+
 predict(model_titanic_glm, passenger, type = "response")
 
 ```
 
 # Calculating aspect importance (logistic regression)
 
-Now we can call aspect_importance() function and see that features included in `wealth` (that is `class` and `fare`) have the biggest contribution on survival prediction for the passenger. That contribution is of negative type. Rest of the aspects have significantly smaller influence. However, in case of `family` and `personal`, it's a positive type of influence.
+Now we can call predict_aspects() function and see that features included in `wealth` (that is `class` and `fare`) have the biggest contribution on survival prediction for the passenger. That contribution is of negative type. Rest of the aspects have significantly smaller influence. However, in case of `family` and `personal`, it's a positive type of influence.
 
 ```{r Calculating aspect importance (logistic regression)}
 library("ggplot2")
 library("triplot")
 
-titanic_glm_ai <- aspect_importance(model_titanic_glm, titanic, predict, passenger, aspects_titanic, N = 1000, label = "logistic regression")
+explain_titanic_glm <- explain(model_titanic_glm, 
+                      data = titanic_without_target,
+                      y = titanic$survived == 1,
+                      label = "Logistic Regression",
+                      verbose = FALSE)
+
+titanic_glm_ai <- predict_aspects(x = explain_titanic_glm, 
+                                    new_observation = passenger, 
+                                    variable_groups = aspects_titanic)
 
 titanic_glm_ai
+
 plot(titanic_glm_ai) + ggtitle("Aspect importance for the selected passenger")
 ```
 
 
-# Calculating aspect importance with explainer
-
-Aspect_importance() could be also called using `DALEX` explainer as we show below.
-
-```{r Calculating aspect importance with explainer}
-explain_titanic_glm <- explain(model_titanic_glm, 
-                      data = titanic_without_target,
-                      y = titanic$survived == 1, 
-                      predict_function = predict,
-                      label = "Logistic Regression", 
-                      verbose = FALSE)
-
-titanic_glm_ai <- aspect_importance(explain_titanic_glm, passenger, aspects_titanic, N = 1000)
-titanic_glm_ai
-
-```
 
 # Random forest model for Titanic survival
 
@@ -111,33 +108,48 @@ Now, we prepare random forest model for the `titanic` dataset.
 
 ```{r  Random forest model for Titanic survival}
 library("randomForest")
-model_titanic_rf <- randomForest(factor(survived) == 1 ~ gender + age + class + embarked + fare + sibsp + parch,  data = titanic)
+model_titanic_rf <- randomForest(factor(survived) == 1 ~ 
+                                   gender + age + class + embarked + 
+                                   fare + sibsp + parch,  
+                                 data = titanic)
+
 predict(model_titanic_rf, passenger)
 ```
 
 # Calculating aspect importance (random forest)
 
-After calling aspect_importance() we can see why the survival prediction for the passenger in random forest model was much higher (0.5) than in logistic regression case (0.18). 
+After calling predict_aspects() we can see why the survival prediction for the passenger in random forest model was much higher (0.5) than in logistic regression case (0.18). 
 
 In this example `personal` features (`age` and `gender`) have the biggest positive influence. Aspects `wealth` (`class`, `fare`) and `embarked` have both much smaller contribution and those are negative ones. Aspect `family` has very small influence on the prediction.
 
 ```{r Calculating aspect importance (random forest)}
-titanic_rf_ai <- aspect_importance(model_titanic_rf, titanic, predict, passenger, aspects_titanic, N = 1000, label = "random forest")
+explain_titanic_rf <- explain(model_titanic_rf, 
+                              data = titanic,
+                              label = "Random forest",
+                              verbose = FALSE)
+
+titanic_rf_ai <- predict_aspects(explain_titanic_rf,
+                                   new_observation = passenger, 
+                                   variable_groups = aspects_titanic)
 
 titanic_rf_ai
+
 plot(titanic_rf_ai) + ggtitle("Aspect importance for the selected passenger")
 ```
 
-# Using lasso in aspect_importance() function
+# Using lasso in predict_aspects() function
 
-Function aspect_importance() can calculate coefficients (that is aspects' importance) by using either linear regression or lasso regression. Using lasso, we can control how many nonzero coefficients (nonzero aspects importance values) are present in the final explanation.
+Function predict_aspects() can calculate coefficients (that is aspects' importance) by using either linear regression or lasso regression. Using lasso, we can control how many nonzero coefficients (nonzero aspects importance values) are present in the final explanation.
 
-To use aspect_importance() with lasso, we have to provide `n_var` parameter, which declares how many aspects importance values we would like to get in aspect_importance() results.
+To use predict_aspects() with lasso, we have to provide `n_var` parameter, which declares how many aspects importance values we would like to get in predict_aspects() results.
 
-For this example, we use `titanic_imputed` dataset again and random forest model. With the help of lasso technique, we would like to check the importance of variables' aspects, while controlling that one of them should be equal to 0. Therefore we call aspect_importance() with `n_var` parameter set to 3. 
+For this example, we use `titanic_imputed` dataset again and random forest model. With the help of lasso technique, we would like to check the importance of variables' aspects, while controlling that one of them should be equal to 0. Therefore we call predict_aspects() with `n_var` parameter set to 3. 
 
 ```{r lasso demo, eval=FALSE}
-titanic_rf_ai_lasso <- aspect_importance(model_titanic_rf, titanic, predict, passenger, aspects_titanic, N = 1000, n_var = 3)
+titanic_rf_ai_lasso <- predict_aspects(explain_titanic_rf, 
+                                         new_observation = passenger,
+                                         variable_groups = aspects_titanic, 
+                                         n_var = 3)
 titanic_rf_ai_lasso
 ```
 
@@ -153,22 +165,37 @@ We import `apartments` from `DALEX` package and choose columns with numeric feat
 ```{r import apartments}
 
 library(DALEX)
+
 data("apartments")
+
 apartments_num <- apartments[,unlist(lapply(apartments, is.numeric))] #excluding non numeric features
+
 head(apartments_num)
+
 apartments_no_target <- apartments_num[,-1] #excluding target variable
+
 new_observation_apartments <- apartments_num[1,]
+
 model_apartments <- lm(m2.price ~ ., data = apartments_num)
 
 ```
 
 We run group_variables() function with cut off level set on 0.6. As a result, we get a list of variables groups (aspects) where absolute value of features' pairwise correlation is at least at 0.6.
 
-Afterwards, we call aspect_importance() function with parameter `show_cor = TRUE`, to check how features are grouped into aspects, what is minimal value of pairwise correlation in each group and to check whether any pair of features is negatively correlated (`neg`) or not (`pos`). 
+Afterwards, we call predict_aspects() function with parameter `show_cor = TRUE`, to check how features are grouped into aspects, what is minimal value of pairwise correlation in each group and to check whether any pair of features is negatively correlated (`neg`) or not (`pos`). 
 
 ```{r}
 aspects_apartments <- group_variables(apartments_no_target, 0.6)
-apartments_ai <- aspect_importance(x = model_apartments, data = apartments_no_target, new_observation = new_observation_apartments, variable_groups = aspects_apartments, N = 500, show_cor = TRUE)
+
+explain_apartments <- explain(model = model_apartments,
+                              data = apartments_no_target,
+                              verbose = FALSE)
+
+apartments_ai <- predict_aspects(x = explain_apartments, 
+                                   new_observation = new_observation_apartments,
+                                   variable_groups = aspects_apartments, 
+                                   show_cor = TRUE)
+
 apartments_ai
 ```
 
@@ -185,12 +212,18 @@ Hierarchical aspects importance allows us to check the values of aspects importa
 It should be noted that similarly to `group_variables()`, `calculate_triplot()` works for the datasets with only numerical variables. 
 
 ```{r}
-tri <- calculate_triplot(model_apartments, apartments_no_target, 
-        new_observation = new_observation_apartments, N = 500, 
-        clust_method = "complete", absolute_value = FALSE, 
-        cumulative_max = FALSE, add_importance_labels = FALSE, 
-        abbrev_labels = 15)
-plot(tri)
+library(DALEX)
+
+apartments_tri <- calculate_triplot(explain_apartments,
+                                    new_observation = new_observation_apartments,
+                                    clust_method = "complete", 
+                                    absolute_value = FALSE, 
+                                    cumulative_max = FALSE, 
+                                    add_importance_labels = FALSE, 
+                                    abbrev_labels = 15,
+                                    add_last_group = TRUE)
+
+plot(apartments_tri)
 
 ```
 
